@@ -2,7 +2,10 @@
 
 *eix-0.23.8
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
-	- Do not update status line if output is not a terminal
+	- scripts: Do not update status line if output is not a terminal
+	- eix-remote: Change ownership before calling wget, see
+	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=18493&
+	  group_id=11597
 	- Make correct fix for http://bugs.gentoo.org/show_bug.cgi?id=399451.
 	  Thank Arfrever Frehtes Taifersar Arahesis <arfrever.fta at gmail.com>
 
